routes added and saves to browser history

--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -8,6 +8,11 @@
     margin: 0;
     padding: 0;
 }
+.i-left{
+    width: 60%;
+    display: flex;
+    align-content: center;
+}
 .i-left h1{
     font-size: 3rem;
 }
